# font-proj

./: .gitignore  manage.py  pyproject.toml  tox.ini
font_api/: apps.py  models.py  serializers.py  urls.py  views.py
font_proj/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
